[package]
name = "black_widow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"
tokio = { version = "1.35.1", features = ["full"]}
clap = { version = "4.4.18", features = ["derive"] }
