[package]
name = "cherna_vdovitsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"
url = "2.5.0"
tokio = { version = "1.35.1", features = ["full", "tracing"]}
clap = { version = "4.4.18", features = ["derive"] }
scraper = "0.18.1"
console-subscriber = "0.2.0"
futures = "0.3.30"

[build]
rustflags = ["--cfg", "tokio_unstable"]
